# rust-loyalty-service

./: Cargo.toml
src/: lib.rs
src/adapters/database/: memory.rs  mod.rs
src/commands/: add_points.rs  mod.rs
src/domain/: mod.rs
src/ports/: database.rs  member.rs  mod.rs
