[package]
name = "rust-loyalty-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.26"
mockall = "0.11.4"
speculoos = "0.11.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
uuid = { version = "1.3.4", features = ["v4"] }

[dev-dependencies]
rstest = "0.18.1"
